--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -14,7 +14,7 @@
             </li>
             <li class="nav-item pl-2 pt-1">
                 <a class="link" href="">
-                    <p class="m-0 corTitulo">Editar</p>
+                    <p class="m-0 corTitulo"><i class="fa fa-pencil" aria-hidden="true"></i></p>
                 </a>
             </li>
         </ul>
