--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -1,49 +1,30 @@
-<footer>
+<footer class="text-center text-white" style="background-color: #340e4650;">
 
-    <div class="container-fluid">
+    <hr class="mt-0">
 
-        <div class="row text-center d-flex justify-content-center pt-5 mb-3">
+    <div class="container-fluid pt-4">
+        <section class=" d-flex justify-content-center mb-4">
 
-            <div class="col-md-2 mb-3">
-                <h6 class="text-uppercase font-weight-bold">
-                    <a href="#!">About us</a>
-                </h6>
-            </div>
-            
-            <div class="col-md-2 mb-3">
-                <h6 class="text-uppercase font-weight-bold">
-                    <a href="#!">Products</a>
-                </h6>
-            </div>
+            <a mdbRipple rippleColor="dark" class="btn-lg m-1 corTitulo"
+                href="https://github.com/geovanig" target="_blank"><i class="fa fa-github-alt"
+                    aria-hidden="true"></i></a>
 
-            <div class="col-md-2 mb-3">
-                <h6 class="text-uppercase font-weight-bold">
-                    <a href="#!">Awards</a>
-                </h6>
-            </div>
 
-        </div>
-        
-        <hr class="rgba-white-light" style="margin: 0 15%;">
+            <a mdbRipple rippleColor="dark" class="btn-lg m-1 corTitulo"
+                href="https://www.linkedin.com/in/geovanigleidson/" role="button" target="_blank"><i
+                    class="fa fa-linkedin" aria-hidden="true"></i></a>
 
-        <div class="row d-flex text-center justify-content-center mb-md-0 mb-4">
 
-            <div class="col-md-8 col-12 mt-5">
-                <p>“Sempre nos definimos pela capacidade de superar o impossível. Contamos esses momentos em que ousamos
-                    almejar mais alto, quebrar barreiras, alcançar as estrelas, fazer o desconhecido conhecido. Contamos
-                    esses momentos como nossas conquistas de maior orgulho. Mas perdemos tudo isso, ou talvez, apenas,
-                    tenhamos esquecido que ainda somos pioneiros, que mal começamos e que nossas maiores realizações não
-                    podem ficar para trás, porque nosso destino está acima de nós.”</p>
-            </div>
+            <a mdbRipple rippleColor="dark" class="btn-lg m-1 corTitulo"
+                href="https://geovanigleidson.netlify.app/" role="button" target="_blank"><i class="fa fa-lightbulb-o"
+                    aria-hidden="true"></i></a>
 
-        </div>
-
-        <hr>
-
+        </section>
     </div>
 
-    <div class="footer-copyright text-center">
-        © 2022 Copyright:Geovani Gleidson
+    <div class="container-fluid text-center text-dark p-4 font-weight-bold"
+        style="background-color: rgba(48, 0, 88, 0.144);">
+        © 2022 Copyright: Geovani Gleidson
     </div>
 
 </footer>
