rotas vazia, login e cadastro

--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -49,7 +49,7 @@
                         <hr class="mt-1 mb-3">
 
                         <div class="d-flex justify-content-center mb-2">
-                            <button class="btn text-uppercase mr-4 ml-4">Voltar</button>
+                            <button class="btn text-uppercase mr-4 ml-4" routerLink="/logar">Voltar</button>
                             <button class="btn btnColor text-uppercase mr-4 ml-4">Criar</button>
                         </div>
 
