--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -20,7 +20,7 @@
                         </div>
 
                         <div class="d-flex justify-content-center">
-                            <button class="btn text-uppercase">Logar</button>
+                            <button class="btn text-uppercase"  routerLink="/cadastrar">Logar</button>
                         </div>
 
                         <hr class="mt-4 mb-2">
