--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -20,13 +20,13 @@
                         </div>
 
                         <div class="d-flex justify-content-center">
-                            <button class="btn text-uppercase"  routerLink="/cadastrar">Logar</button>
+                            <button class="btn text-uppercase">Logar</button>
                         </div>
 
                         <hr class="mt-4 mb-2">
 
                         <p class="text-center">
-                            Se não tem um conta, <a href="">cadastre aqui!</a>
+                            Se não tem um conta, <a routerLink="/cadastrar">cadastre aqui!</a>
                         </p>
 
                     </form>
