--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,22 +11,22 @@
 
                     <form>
                         <div class="form-floating mb-3">
-                            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                            <label for="floatingInput">Email</label>
+                            <input [(ngModel)]="loginLeitor.email" type="text" name="email" class="form-control" id="email" placeholder="name@example.com">
+                            <label for="email">Email</label>
                         </div>
                         <div class="form-floating mb-3">
-                            <input type="password" class="form-control" id="floatingPassword" placeholder="Digite a senha aqui...">
-                            <label for="floatingPassword">Senha</label>
+                            <input [(ngModel)]="loginLeitor.senha" type="password" name="senha" class="form-control" id="senha" placeholder="Digite a senha aqui...">
+                            <label for="senha">Senha</label>
                         </div>
 
                         <div class="d-flex justify-content-center">
-                            <button class="btn text-uppercase">Logar</button>
+                            <button class="btn text-uppercase" (click)="logar()">Logar</button>
                         </div>
 
                         <hr class="mt-4 mb-2">
 
                         <p class="text-center">
-                            Se não tem um conta, <a routerLink="/cadastrar">cadastre aqui!</a>
+                            Se não tem um conta, <a href="#" routerLink="/cadastrar">cadastre aqui!</a>
                         </p>
 
                     </form>
