Tela de inicio pronta

--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,1 +1,28 @@
+<div class="container-fluid">
 
+    <div class="row corFundo d-flex align-items-center">
+
+        <div class="col-md-6">
+
+            <div class="row d-flex justify-content-center">
+                <div class="col-md-6">
+                    <h1>A verdade inimaginável...</h1>
+                    <h4>Explore, conheça e perceba diversas obras da Ficção Científica e seus subgêneros.</h4>
+                </div>
+            </div>
+
+            <div class="row d-flex justify-content-center mt-2 mb-4">
+                <div class="col-md-6">
+                    <button class="btn btn-outline-dark mr-2">Nova Postagem</button>
+                    <a class="btn btn-outline-dark" href="">Ver Postagens</a>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="col-md-6 d-flex justify-content-center">
+            <img src="../../assets/images/Outer space-bro.png" alt="" width="400px" height="400px">
+        </div>
+
+    </div> 
+</div>
