Estrutura da página tema sem estilização

--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -81,7 +81,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="tema">Selecione a categoria <a href="">(cadastrar categoria...)</a></label>
+                    <label for="tema">Selecione a categoria <a data-dismiss="modal" routerLink="/tema">(cadastrar categoria...)</a></label>
                     <select class="form-control" name="tema" id="tema">
                         <option value="">Categoria</option>
                     </select>
