--- a/src/app/tema/tema.component.html
+++ b/src/app/tema/tema.component.html
@@ -1,20 +1,21 @@
 <div class="container-fluid">
-    <div class="row bg-secondary">
-        <div class="col-md-12 text-white">
+    <div class="row fundo">
+        <div class="col-md-12 texto">
 
             <a routerLink="/inicio" class="text-white text-left">
-                <i class="fa fa-angle-double-left" aria-hidden="true"></i>ínicio
+                <button class="mt-2 btn btn-outline-dark">Início</button>
             </a>
-            <h1 class="fs-54 text-center">Temas</h1>
-            <h5 class="fs-18 text-center">Veja aqui todos os temas cadastrados ou cadastre um novo</h5>
+            <h1 class="text-center">Categorias</h1>
+            <hr class="mb-4">
+            <h4 class="text-center">Cadastre uma categoria...</h4>
 
-            <div class="row d-flex justify-content-center mt-4 mb-5">
+            <div class="row d-flex justify-content-center mt-4 mb-4">
                 <div class="col-md-3">
                     <div class="form-group">
-                        <input type="text" class="form-control" id="descricao" placeholder="Digite a descrição do tema">
+                        <input type="text" class="form-control" id="descricao" placeholder="Digite a descrição da categoria...">
                     </div>
                     <div class="d-flex justify-content-center">
-                        <button class="btn btn-light">Cadastrar</button>
+                        <button class="btn btnStyle">Cadastrar</button>
                     </div>
                 </div>
             </div>
@@ -24,14 +25,14 @@
 </div>
 
 <div class="container-fluid">
-    <div class="row mt-5">
+    <div class="row mt-4 mb-4">
         <div class="col-md-12">
-            <h2 class="text-center">Todos os temas</h2>
+            <h4 class="text-center">Categorias:</h4>
         </div>
     </div>
     <div class="row mt-3 mb-5 d-flex justify-content-center">
-        <div class="col-md-6">
-            <table class="table table-hover">
+        <div class="col-md-8">
+            <table class="table table-dark table-hover">
                 <thead>
                     <tr>
                         <th scope="col">#</th>
