--- a/src/app/tema/tema.component.html
+++ b/src/app/tema/tema.component.html
@@ -12,10 +12,10 @@
             <div class="row d-flex justify-content-center mt-4 mb-4">
                 <div class="col-md-3">
                     <div class="form-group">
-                        <input type="text" class="form-control" id="descricao" placeholder="Digite a descrição da categoria...">
+                        <input [(ngModel)]="tema.descricao" type="text" class="form-control" id="descricao" placeholder="Digite a descrição da categoria...">
                     </div>
                     <div class="d-flex justify-content-center">
-                        <button class="btn btnStyle">Cadastrar</button>
+                        <button class="btn btnStyle" (click)="cadastrarTema()">Cadastrar</button>
                     </div>
                 </div>
             </div>
