--- a/src/app/tema/tema.component.html
+++ b/src/app/tema/tema.component.html
@@ -33,33 +33,25 @@
     <div class="row mt-3 mb-5 d-flex justify-content-center">
         <div class="col-md-8">
             <table class="table table-dark table-hover">
+
                 <thead>
                     <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">First</th>
-                        <th scope="col">Last</th>
-                        <th scope="col">Handle</th>
+                        <th scope="col">ID</th>
+                        <th scope="col">Descrição</th>
+                        <th scope="col" class="text-right">Configuração</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody *ngFor="let tema of listaTemas">
                     <tr>
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">3</th>
-                        <td colspan="2">Larry the Bird</td>
-                        <td>@twitter</td>
+                        <th>{{tema.id}}</th>
+                        <td>{{tema.descricao}}</td>
+                        <td class=" d-flex justify-content-end">
+                            <button class="btn btnEdit mr-1 ml-1">Editar</button>
+                            <button class="btn btnDelete mr-1 ml-1">Apagar</button>
+                        </td>
                     </tr>
                 </tbody>
+
             </table>
         </div>
     </div>
