--- a/src/app/tema/tema.component.html
+++ b/src/app/tema/tema.component.html
@@ -12,7 +12,8 @@
             <div class="row d-flex justify-content-center mt-4 mb-4">
                 <div class="col-md-3">
                     <div class="form-group">
-                        <input [(ngModel)]="tema.descricao" type="text" class="form-control" id="descricao" placeholder="Digite a descrição da categoria...">
+                        <input [(ngModel)]="tema.descricao" type="text" class="form-control" id="descricao"
+                            placeholder="Digite a descrição da categoria...">
                     </div>
                     <div class="d-flex justify-content-center">
                         <button class="btn btnStyle" (click)="cadastrarTema()">Cadastrar</button>
@@ -41,13 +42,15 @@
                         <th scope="col" class="text-right">Configuração</th>
                     </tr>
                 </thead>
-                <tbody *ngFor="let tema of listaTemas">
+                <tbody *ngFor="let item of listaTemas">
                     <tr>
-                        <th>{{tema.id}}</th>
-                        <td>{{tema.descricao}}</td>
+                        <th>{{item.id}}</th>
+                        <td>{{item.descricao}}</td>
                         <td class=" d-flex justify-content-end">
-                            <button class="btn btnEdit mr-1 ml-1">Editar</button>
-                            <button class="btn btnDelete mr-1 ml-1">Apagar</button>
+                            <button class="btn btnEdit mr-1 ml-1"
+                                [routerLink]="['/tema-edit', item.id]">Editar</button>
+                            <button class="btn btnDelete mr-1 ml-1"
+                                [routerLink]="['/tema-delete', item.id]">Apagar</button>
                         </td>
                     </tr>
                 </tbody>
