--- a/src/app/edit/tema-edit/tema-edit.component.html
+++ b/src/app/edit/tema-edit/tema-edit.component.html
@@ -1,1 +1,25 @@
-<h1>{{tema.descricao}}</h1>
+<div class="container mt-4 mb-4">
+
+    <div class="row">
+        <div class="col-md-12">
+            <h1 class="text-center">Editar descrição de categoria</h1>
+        </div>
+    </div>
+
+    <div class="row d-flex justify-content-center">
+        <div class="col-md-4">
+
+            <div class="form-group">
+                <label for="descricao">Descrição</label>
+                <input type="text" class="form-control" id="descricao" [(ngModel)]="tema.descricao">
+            </div>
+
+            <div class="d-flex justify-content-center">
+                <button class="btn btnBack mr-1 ml-1" routerLink="/tema">Cancelar Edição</button>
+                <button class="btn btnEdit mr-1 ml-1" (click)="atualizar()">Aplicar Edição</button>
+            </div>
+
+        </div>
+    </div>
+
+</div>
