--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -13,7 +13,8 @@
 
             <div class="row d-flex justify-content-center mt-2 mb-4">
                 <div class="col-md-6">
-                    <button class="btn btn-outline-dark mr-2" data-toggle="modal" data-target="#staticBackdrop">Nova Postagem</button>
+                    <button class="btn btn-outline-dark mr-2" data-toggle="modal" data-target="#staticBackdrop">Nova
+                        Postagem</button>
                     <a class="btn btn-outline-dark" href="#postagens">Ver Postagens</a>
                 </div>
             </div>
@@ -77,25 +78,28 @@
 
                 <div class="form-group">
                     <label for="titulo">Título</label>
-                    <input type="text" class="form-control" id="titulo" placeholder="Digite o título da postagem...">
+                    <input [(ngModel)]="postagem.titulo" type="text" class="form-control" id="titulo" placeholder="Digite o título da postagem...">
                 </div>
 
                 <div class="form-group">
-                    <label for="tema">Selecione a categoria <a data-dismiss="modal" routerLink="/tema">(cadastrar categoria...)</a></label>
-                    <select class="form-control" name="tema" id="tema">
-                        <option value="">Categoria</option>
+                    <label for="tema">Selecione a categoria <a data-dismiss="modal" routerLink="/tema">(cadastrar
+                            categoria...)</a></label>
+                    <select class="form-control" name="tema" id="tema" [(ngModel)]="idTema" (change)="findByIdTema()">
+                        <option *ngFor="let item of listaTemas" value="{{item.id}}">
+                            {{item.descricao}}
+                        </option>
                     </select>
                 </div>
 
                 <div class="form-group">
                     <label for="titulo">Texto</label>
-                    <textarea class="form-control" name="texto" id="texto" rows="8"></textarea>
+                    <textarea [(ngModel)]="postagem.texto" class="form-control" name="texto" id="texto" rows="8"></textarea>
                 </div>
 
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn1" data-dismiss="modal">Voltar</button>
-                <button type="button" class="btn btn2">Postar</button>
+                <button type="button" class="btn btn2" (click)="publicar()" data-dismiss="modal">Postar</button>
             </div>
         </div>
     </div>
