--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -63,6 +63,10 @@
                         <p class="card-text">{{item.texto}}</p>
                         <p class="card-text"><small class="text-muted">{{item.date | date: "dd/MM/yyyy"}} - {{item.date
                                 | date: "HH:mm"}}</small></p>
+
+                        <a [routerLink]="['/postagem-edit', item.id]" class="text-info mr-1 ml-1">Editar</a>
+                        <a [routerLink]="['/postagem-delete', item.id]" class="text-danger mr-1 ml-1">Apagar</a>
+
                         <hr class="mt-4">
                     </div>
                 </div>
@@ -89,7 +93,7 @@
         </div>
 
         <div class="tab-pane fade" id="postagensCategoria" role="tabpanel" aria-labelledby="postagensCategoria-tab">
-           
+
             <div class="card-columns" *ngFor="let item of listaTemas">
                 <div class="card text-center" *ngFor="let item of tema.postagem">
                     <div class="card-body">
