Atualização de usuario quase funcional

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -13,7 +13,7 @@
                 <h4 class="m-0 corTitulo">{{nome}}</h4>
             </li>
             <li class="nav-item pl-2 pt-1">
-                <a class="link" href="">
+                <a class="link" [routerLink]="['/usuario-edit', id]">
                     <p class="m-0 corTitulo"><i class="fa fa-pencil" aria-hidden="true"></i></p>
                 </a>
             </li>
