--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -94,15 +94,15 @@
 
         <div class="tab-pane fade" id="postagensCategoria" role="tabpanel" aria-labelledby="postagensCategoria-tab">
 
-            <div class="card-columns" *ngFor="let item of listaTemas">
-                <div class="card text-center" *ngFor="let item of tema.postagem">
-                    <div class="card-body">
-                        <h4 class="card-title">{{item.titulo}}</h4>
-                        <p class="card-text">{{item.texto}}</p>
-                        <p class="card-text"><small class="text-muted">{{item.date | date: "dd/MM/yyyy"}} - {{item.date
-                                | date: "HH:mm"}}</small></p>
-                        <p class="card-text"><small class="text-muted">{{item.leitor.nome}}</small></p>
-                    </div>
+            <div class="card-columns" *ngFor='let item of listaTemas'>
+                <div class="card text-center" *ngFor='let item of tema.postagem'>
+                  <div class="card-body">
+                    <h5 class="card-title m-0">{{item.titulo}}</h5>
+                    <p class="card-text mt-3">{{item.texto}}</p>
+                    <p class="card-text"><small class="text-muted">{{item.date | date: 'dd/MM/yyyy'}} às {{item.date | date:
+                        'HH:mm'}}</small></p>
+                    <p class="card-text"><small class="text-muted">by: {{item.leitor.nome}}</small></p>
+                  </div>
                 </div>
             </div>
 
