--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -32,26 +32,53 @@
     <ul class="nav nav-tabs d-flex justify-content-center" id="myTab" role="tablist">
 
         <li class="nav-item" role="presentation">
-            <a class="nav-link active text-dark font-weight-bold" id="minhaPostagens-tab" data-toggle="tab"
-                href="#minhaPostagens" role="tab" aria-controls="minhaPostagens" aria-selected="true">Minhas
+            <a class="nav-link active text-dark font-weight-bold" id="todasPostagens-tab" data-toggle="tab"
+                href="#todasPostagens" role="tab" aria-controls="nav-todasPostagens" aria-selected="true">Todas as
                 postagens</a>
         </li>
 
         <li class="nav-item" role="presentation">
-            <a class="nav-link text-dark font-weight-bold" id="todasPostagens-tab" data-toggle="tab"
-                href="#todasPostagens" role="tab" aria-controls="todasPostagens" aria-selected="false">Todas as
+            <a (click)="findByIdLeitor()" class="nav-link text-dark font-weight-bold" id="minhaPostagens-tab" data-toggle="tab"
+                href="#minhaPostagens" role="tab" aria-controls="nav-minhaPostagens" aria-selected="false">Minhas
                 postagens</a>
         </li>
 
         <li class="nav-item" role="presentation">
             <a class="nav-link text-dark font-weight-bold" id="postagensCategoria-tab" data-toggle="tab"
-                href="#postagensCategoria" role="tab" aria-controls="postagensCategoria" aria-selected="false">Postagens
+                href="#postagensCategoria" role="tab" aria-controls="nav-postagensCategoria" aria-selected="false">Postagens
                 por categoria</a>
         </li>
 
     </ul>
 
     <div class="tab-content" id="myTabContent">
+
+        <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel" aria-labelledby="nav-todasPostagens-tab">
+
+            <div class="row d-flex justify-content-center mt-4 mb-4">
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <input class="form-control" type="text" id="titulo" placeholder="Pesquisar titulo da postagem..." [(ngModel)]="tituloPost" (keyup)="findByTituloPostagem()">
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-columns d-flex align-items-center"
+            *ngFor="let item of listaPostagens | orderBy : key : reverse">
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h4 class="card-title">{{item.titulo}}</h4>
+                        <p class="card-text"><small class="text-muted">{{item.tema.descricao}}</small></p>
+                        <p class="card-text">{{item.texto}}</p>
+                        <p class="card-text"><small class="text-muted">{{item.date | date: "dd/MM/yyyy"}} - {{item.date
+                                | date: "HH:mm"}}</small></p>
+                        <p class="card-text"><small class="text-muted">{{item.leitor.nome}}</small></p>
+                        <hr class="mt-4">
+                    </div>
+                </div>
+            </div>
+
+        </div>
 
         <div class="tab-pane fade show active" id="minhaPostagens" role="tabpanel" aria-labelledby="minhaPostagens-tab">
 
@@ -75,26 +102,15 @@
 
         </div>
 
-        <div class="tab-pane fade" id="todasPostagens" role="tabpanel" aria-labelledby="todasPostagens-tab">
+        <div class="tab-pane fade" id="postagensCategoria" role="tabpanel" aria-labelledby="nav-postagensCategoria-tab">
 
-            <div class="card-columns d-flex align-items-center"
-            *ngFor="let item of listaPostagens | orderBy : key : reverse">
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h4 class="card-title">{{item.titulo}}</h4>
-                        <p class="card-text"><small class="text-muted">{{item.tema.descricao}}</small></p>
-                        <p class="card-text">{{item.texto}}</p>
-                        <p class="card-text"><small class="text-muted">{{item.date | date: "dd/MM/yyyy"}} - {{item.date
-                                | date: "HH:mm"}}</small></p>
-                        <p class="card-text"><small class="text-muted">{{item.leitor.nome}}</small></p>
-                        <hr class="mt-4">
+            <div class="row d-flex justify-content-center mt-4 mb-4">
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <input class="form-control" type="text" id="titulo" placeholder="Digite o tema para pesquisa..." [(ngModel)]="descricaoTema" (keyup)="findByDescricao()">
                     </div>
                 </div>
             </div>
-
-        </div>
-
-        <div class="tab-pane fade" id="postagensCategoria" role="tabpanel" aria-labelledby="nav-postagensCategoria-tab">
 
             <div class="card-columns" *ngFor='let item of listaTemas'>
                 <div class="card text-center" *ngFor='let item of tema.postagem'>
